--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "apollo-server": "^2.3.1",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
+    "firebase-admin": "^6.5.0",
     "graphql": "^14.0.2",
     "graphql-subscriptions": "^1.0.0",
     "graphql-tools": "^4.0.3",
